--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -118,6 +118,7 @@ CP14VialSmallLumiMushroom: CP14VialTinyLumiMushroom
 
 #2024-10-20
 CP14SpawnPointHouseKeeper: CP14SpawnPointQuartermaster
+CP14WoodenDoorTavernDorms: null
 
 # <---> CrystallPunk migration zone end
 
