--- a/Resources/Prototypes/_CP14/Entities/Structures/Doors/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Doors/base.yml
@@ -16,18 +16,4 @@
     closedDrawDepth: Mobs
     openDrawDepth: Mobs
   - type: Lock
-    locked: true
-    lockSlotId: lock_slot
-  - type: ItemSlots
-    slots: 
-      lock_slot:
-        name: cp-lock-slot-component-slot-name-default
-        disableEject: true
-        insertOnInteract: false
-        ejectOnBreak: true
-        whitelist:
-          components:
-          - CPLock
-  - type: ContainerContainer
-    containers:
-      lock_slot: !type:ContainerSlot
+    locked: false
