--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -33,7 +33,7 @@ CP14AlchemyFurnaceDebug: CP14AlchemyFurnace
 
 #2024-09-22
 CP14WoodDoorTavern: CP14WoodenDoorWindowedTavernHall
-CP14LockTavern: CP14LockTavernHall
+CP14LockTavern: null
 CP14KeyTavern: CP14KeyTavernHall
 
 #2024-09-23
