--- a/Resources/Prototypes/_CP14/Tiles/produced.yml
+++ b/Resources/Prototypes/_CP14/Tiles/produced.yml
@@ -135,3 +135,33 @@
     collection: FootstepAsteroid
   heatCapacity: 10000
   weather: false
+
+- type: tile
+  editorHidden: false
+  id: CP14FloorMarble
+  name: cp14-tiles-stonebricks-marble
+  sprite: /Textures/_CP14/Tiles/Marble/marble.png
+  variants: 1
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.5
+  - 1.5
+  edgeSpritePriority: 102
+  edgeSprites:
+    SouthEast: /Textures/_CP14/Tiles/Marble/single_edge_SE.png
+    NorthEast: /Textures/_CP14/Tiles/Marble/single_edge_NE.png
+    NorthWest: /Textures/_CP14/Tiles/Marble/single_edge_NW.png
+    SouthWest: /Textures/_CP14/Tiles/Marble/single_edge_SW.png
+    South: /Textures/_CP14/Tiles/Marble/double_edge_S.png
+    East: /Textures/_CP14/Tiles/Marble/double_edge_E.png
+    North: /Textures/_CP14/Tiles/Marble/double_edge_N.png
+    West: /Textures/_CP14/Tiles/Marble/double_edge_W.png
+  baseTurf: CP14FloorFoundation
+  isSubfloor: false
+  footstepSounds:
+    collection: FootstepAsteroid
+  heatCapacity: 10000
+  weather: false
