--- a/Resources/Prototypes/_CP14/Entities/Structures/Walls/walls.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Walls/walls.yml
@@ -53,14 +53,14 @@
   - type: CP14WallpaperHolder
 
 - type: entity
-  id: CP14WallWhitebrick
-  name: white brick wall
+  id: CP14WallMarbleBrick
+  name: marble brick wall
   parent: CP14BaseWall
   components:
   - type: Sprite
-    sprite: _CP14/Structures/Walls/whitebricks_stone_wall.rsi
+    sprite: _CP14/Structures/Walls/marblebricks_stone_wall.rsi
   - type: Icon
-    sprite: _CP14/Structures/Walls/whitebricks_stone_wall.rsi
+    sprite: _CP14/Structures/Walls/marblebricks_stone_wall.rsi
   - type: IconSmooth
     base: stonebricks
   - type: CP14WallpaperHolder
@@ -184,17 +184,4 @@
     - skullsA
     - skullsB
   - type: Appearance
-  - type: CP14WallpaperHolder
-
-- type: entity
-  id: CP14WallSteel
-  name: steel wall
-  parent: CP14BaseWall
-  components:
-  - type: Sprite
-    sprite: _CP14/Structures/Walls/steel_wall.rsi
-  - type: Icon
-    sprite: _CP14/Structures/Walls/steel_wall.rsi
-  - type: IconSmooth
-    base: wall
   - type: CP14WallpaperHolder
