--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -110,6 +110,7 @@ CP14VialSmallLumiMushroom: CP14VialTinyLumiMushroom
 #2024-10-20
 CP14SpawnPointHouseKeeper: CP14SpawnPointQuartermaster
 CP14WoodenDoorTavernDorms: null
+CP14WallWhitebrick: CP14WallMarbleBrick
 
 # <---> CrystallPunk migration zone end
 
