--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/mobs.yml
@@ -29,3 +29,19 @@
   - type: ConditionalSpawner
     prototypes:
     - CP14MobRabbit
+
+- type: entity
+  name: yumkaraptor spawner
+  id: CP14SpawnMobDinoYumkaraptor
+  parent: MarkerBase
+  categories: [ ForkFiltered ]
+  components:
+  - type: Sprite
+    layers:
+    - sprite: Markers/cross.rsi
+      state: green
+    - sprite: _CP14/Mobs/Animals/dino.rsi
+      state: dino
+  - type: ConditionalSpawner
+    prototypes:
+    - CP14MobDinoYumkaraptor
