Revert "remove barrel crafting"
This reverts commit d3c5a26136a9cf314359c82c96c70588280d915f.

--- a/Resources/Prototypes/_CP14/Recipes/Workbench/workbench.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/workbench.yml
@@ -9,6 +9,15 @@
   result: CP14Bucket
 
 - type: CP14Recipe
+  id: CP14BaseBarrel
+  tag: CP14RecipeWorkbench
+  craftTime: 3
+  stacks:
+    CP14WoodenPlanks: 5
+    CP14Nail: 2
+  result: CP14BaseBarrel
+
+- type: CP14Recipe
   id: CP14WoodenBeerMug
   tag: CP14RecipeWorkbench
   craftTime: 3
