--- a/Resources/Prototypes/Roles/Antags/thief.yml
+++ b/Resources/Prototypes/Roles/Antags/thief.yml
@@ -2,7 +2,7 @@
   id: Thief
   name: roles-antag-thief-name
   antagonist: true
-  setPreference: true
+  setPreference: false #CP14
   objective: roles-antag-thief-objective
   guides: [ Thieves ]
 
