--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/animals.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/animals.yml
@@ -153,15 +153,12 @@
   id: CP14MobBoar
   parent: CP14MobPig
   name: boar
-  description: A distant relative of pigs, the same pluses, but unlike peaceful relatives, will definitely try to raise you on the fangs, if you get too close.
+  description: A distant relative of pigs, same pros, but unlike its peaceful relatives, will definitely try to pick you up on its fangs if you show aggression towards it.
   categories: [ ForkFiltered ]
   components:
   - type: HTN
     rootTask:
-      task: DefensibleAnimalCompound
-  - type: NpcFactionMember
-    factions:
-    - CP14AggressiveAnimals
+      task: RuminantHostileCompound
   - type: Sprite
     layers:
     - map: ["enum.DamageStateVisualLayers.Base"]
@@ -185,3 +182,6 @@
     - id: CP14MobBoar
       maxAmount: 1
   - type: ReproductivePartner
+  - type: NPCRetaliation
+    attackMemoryLength: 10
+  - type: FactionException
