--- a/Resources/Prototypes/_CP14/game_presets.yml
+++ b/Resources/Prototypes/_CP14/game_presets.yml
@@ -26,6 +26,8 @@
   name: sandbox-title
   description: sandbox-description
   showInVote: true # For playtest period only
+  cP14Allowed: true
   rules:
     - Sandbox
     - CP14RoundObjectivesRule
+    - CP14BanditsRule
