reaname QM to commandant, and merchant to banker

--- a/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
@@ -69,7 +69,7 @@
   - CP14GeneralTrinkets
 
 - type: roleLoadout
-  id: JobCP14Quartermaster
+  id: JobCP14Commandant
   groups:
   - CP14GeneralHead
   - CP14GeneralEyes
