--- a/Resources/Prototypes/_CP14/Roles/play_time_tracker.yml
+++ b/Resources/Prototypes/_CP14/Roles/play_time_tracker.yml
@@ -16,7 +16,7 @@
   id: CP14JobGuardCommander
 
 - type: playTimeTracker
-  id: CP14JobQuartermaster
+  id: CP14JobCommandant
 
 - type: playTimeTracker
-  id: CP14JobMerchant
+  id: CP14JobBanker
