--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
@@ -11,6 +11,7 @@
   - CP14ClothingCloakFurcapeBlack
   - CP14ClothingCloakFurcapeBlue
   - CP14ClothingCloakMaidArpon
+  - CP14ClothingCloakRitualAttireLeather
 
 - type: loadout
   id: CP14ClothingCloakSimpleWhite
@@ -41,6 +42,11 @@
   id: CP14ClothingCloakMaidArpon
   equipment:
     cloak: CP14ClothingCloakMaidArpon
+
+- type: loadout
+  id: CP14ClothingCloakRitualAttireLeather
+  equipment:
+    cloak: CP14ClothingCloakRitualAttireLeather
 
 # Eyes
 
