--- a/Resources/Prototypes/_CP14/Maps/arenas.yml
+++ b/Resources/Prototypes/_CP14/Maps/arenas.yml
@@ -77,8 +77,8 @@
             CP14Alchemist: [ 2, 3 ]
             CP14Innkeeper: [ 3, 4 ]
             CP14Captain: [1, 1]
-            CP14Quartermaster: [1, 1]
-            CP14Merchant: [3, 4]
+            CP14Commandant: [1, 1]
+            CP14Banker: [3, 4]
             #CP14GuardCommander: [1, 1]
         - type: CP14StationZLevels
           defaultMapLevel: 0
