--- a/Resources/Prototypes/_CP14/GameRules/roundstart.yml
+++ b/Resources/Prototypes/_CP14/GameRules/roundstart.yml
@@ -15,6 +15,8 @@
     departmentObjectives:
       CP14Command:
       - CP14TownSendObjectiveGroup
+      CP14Bank:
+      - CP14BankEarningObjectiveGroup
   - type: CP14PersonalObjectivesRule
     departmentObjectives:
       CP14Mercenary:
