--- a/Resources/Prototypes/_CP14/Roles/Jobs/Bank/banker.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Bank/banker.yml
@@ -10,4 +10,5 @@
 - type: startingGear
   id: CP14BankerGear
   equipment:
-    belt1: CP14KeyRingInnkeeper
+    belt1: CP14WalletFilledTest
+    belt1: CP14KeyRingBanker
