--- a/Resources/Prototypes/_CP14/Roles/Jobs/Bank/commandant.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Bank/commandant.yml
@@ -14,4 +14,5 @@
 - type: startingGear
   id: CP14CommandantGear
   equipment:
-    belt1: CP14KeyRingInnkeeper
+    belt1: CP14WalletFilledTest
+    keys: CP14KeyRingCommandant
