--- a/Resources/Prototypes/_CP14/Objectives/empire_orders.yml
+++ b/Resources/Prototypes/_CP14/Objectives/empire_orders.yml
@@ -53,12 +53,28 @@
 
 - type: entity
   parent: CP14BaseTownBankEarningObjective
-  id: CP14TownBankEarningObjective
+  id: CP14TownBankEarningObjectiveSmall
   components:
   - type: CP14CurrencyStoredCondition
-    currency: 50000
+    currency: 10000
+
+- type: entity
+  parent: CP14BaseTownBankEarningObjective
+  id: CP14TownBankEarningObjectiveMedium
+  components:
+  - type: CP14CurrencyStoredCondition
+    currency: 20000
+
+- type: entity
+  parent: CP14BaseTownBankEarningObjective
+  id: CP14TownBankEarningObjectiveBig
+  components:
+  - type: CP14CurrencyStoredCondition
+    currency: 30000
 
 - type: weightedRandom
   id: CP14BankEarningObjectiveGroup
   weights:
-    CP14TownBankEarningObjective: 1
+    CP14TownBankEarningObjectiveSmall: 1
+    CP14TownBankEarningObjectiveMedium: 0.6
+    CP14TownBankEarningObjectiveBig: 0.3
