--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
@@ -85,6 +85,7 @@
         variation: 0.125
   - type: SoundWhileAlive
   - type: Strippable
+  - type: Climbing
   - type: UserInterface
     interfaces:
       enum.StrippingUiKey.Key:
